crates/nash-report/tests/parse/expression/snapshots/parse__expression__error_left_arrow.snap
---
source: crates/nash-report/tests/parse/expression/mod.rs
assertion_line: 21
description: "Code:\n\na <- b"
info: diagnostic
---
nash::syntax

  × Unexpected `<-` in expression.
   ╭─[src/Main.nash:1:3]
 1 │ a <- b
   ·   ──
   ╰────
  help: Use `<-` for a binding inside a do block.
